Add hifi-babashka-tasks