@@ -1,25 +1,33 @@
 (ns build
-  (:require [clojure.tools.build.api :as b]))
+  (:require [clojure.tools.build.api :as b]
+            [hifi.bb-tasks.css.tailwind :as tailwind]
+            [clojure.edn :as edn]))
 
-(def lib 'app)
+(def project (-> (edn/read-string (slurp "deps.edn"))
+                 :aliases :neil :project))
+(def lib (:name project))
+
+(def version (:version project))
 (def class-dir "target/classes")
-(def basis (delay (b/create-basis {:project "deps.edn"})))
-(def uber-file (format "target/%s.jar" (name lib)))
+(def basis (b/create-basis {:project "deps.edn"}))
+(def uber-file (format "target/%s-%s-standalone.jar" (name lib) version))
 
-(defn clean [_] (b/delete {:path "target"}))
+(defn clean [_]
+  (b/delete {:path "target"})
+  (b/delete {:path "result"}))
 
-(defn uber
-  [_]
+(defn tailwind [_]
+  (tailwind/build-prod))
+
+(defn uber [_]
   (clean nil)
-  (b/copy-dir {:src-dirs ["src" "resources"] :target-dir class-dir})
-  (b/compile-clj {:basis      @basis
-                  :ns-compile '[app.main2]
-                  :src-dirs   ["src"]
-                  :class-dir  class-dir
-                  :java-opts ;; needed for datalevin
-                  ["--add-opens=java.base/java.nio=ALL-UNNAMED"
-                   "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"]})
+  (tailwind {:release true})
+  (b/copy-dir {:src-dirs   ["src" "resources"]
+               :target-dir class-dir})
+  (b/compile-clj {:basis     basis
+                  :src-dirs  ["src"]
+                  :class-dir class-dir})
   (b/uber {:class-dir class-dir
            :uber-file uber-file
-           :basis     @basis
-           :main      'app.main2}))
+           :basis     basis
+           :main      'site.server}))
